@@ -66,7 +66,7 @@ extern "C" {
 
         CRInput *
         cr_input_new_from_buf (guchar *a_buf, gulong a_len,
-                               enum CREncoding a_enc) ;
+                               enum CREncoding a_enc, gboolean a_free_buf) ;
         CRInput *
         cr_input_new_from_uri (gchar *a_file_uri, enum CREncoding a_enc) ;
 
